--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pinterest clone">
-    <title>Pinterest</title>
+    <title>EasyImages</title>
 
     <link rel="stylesheet" href="style.css">
     <script async src="index.js"></script>
