--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li>Tech</li>
             <li>Food</li>
             <li>Animals</li>
+            <a href="./signature.html">Signature</a>
         </ul>
     </header>
 
